Fix for 2.4.7 Focus visible (Jules’ report)

--- a/src/_includes/partials/page-header/navigation-triggers.css
+++ b/src/_includes/partials/page-header/navigation-triggers.css
@@ -50,6 +50,13 @@
   z-index: 10;
 }
 
+#load-on-javascript button:hover,
+#load-on-javascript button:focus {
+    outline: 1px solid white;
+    outline-offset: 5px;
+    line-height: 1;
+}
+
 #navigation-toggle .navigation-close-icon,
 .navigation-opened #navigation-toggle .navigation-open-icon {
   display: none;
